# research-agent

./: .env.example  .gitignore  CASE_STUDY.md  EVAL.md  EVAL_v1_before_grounding_fix.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.py
agent/: __init__.py  config.py  extract.py  llm.py  loop.py  tools.py  trace.py
eval/: judges.py  questions.yaml  questions_v1_easy.yaml  run_eval.py
eval/results/: q01.json  q01.trace.jsonl  q02.json  q02.trace.jsonl  q03.json  q03.trace.jsonl  q04.json  q04.trace.jsonl  q05.json  q05.trace.jsonl  q06.json  q07.json  q07.trace.jsonl  q08.json  q08.trace.jsonl  q09.json  q09.trace.jsonl  q10.json  q10.trace.jsonl  q11.json  q11.trace.jsonl  q12.json  q12.trace.jsonl  q13.json  q13.trace.jsonl  q14.json  q14.trace.jsonl  q15.json  q15.trace.jsonl  q16.json  q16.trace.jsonl  q17.json  q17.trace.jsonl  q18.json  q18.trace.jsonl  q19.json  q19.trace.jsonl  q20.json  q20.trace.jsonl
examples/: README.md  notion-competitive-brief.jsonl  notion-competitive-brief.md  q06-clean-path.jsonl  q06-clean-path.md  q11-recovery-path.md
tests/: test_loop.py
