[project]
name = "research-agent"
version = "0.1.0"
description = "A model-driven deep-research agent with a cross-provider eval panel"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# Long human-readable prompt/instruction strings are intentional.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
